# chive

./: .gitignore  AGENTS.md  CONTEXT.md
.github/workflows/: coverage.yml
app/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.js  wdio.conf.ts
app/scripts/: build-native-test.mjs  dev-ports.mjs  run-coverage.mjs
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs  runtime_discovery.rs
app/tests/: README.md  coverage-baseline.json
docs/: code-design.md  spikes.md
docs/adr/: 0001-use-pdfjs-tauri-for-pdf-annotation-persistence.md  0002-treat-pdfjs-annotation-editor-lifecycle-as-risky.md  0003-bundle-pdfjs-wasm-decoders-for-scanned-pdfs.md  0004-use-browser-regression-harness-for-pdf-spike.md  0005-derive-annotation-sidebar-data-from-pdf-geometry.md  0006-test-pdfjs-in-native-tauri-webview-not-only-browser.md  0007-add-native-wkwebview-smoke-tests-with-wdio-tauri.md  0008-llm-generated-speculative-coverage-drafting.md  0009-local-first-observability-for-desktop-pdf-editor.md  0010-defer-vim-like-pdf-text-cursor.md  0011-use-native-pdf-outline-colors.md  0012-treat-inkhighlight-as-highlight-intent.md  0013-transplant-spike-into-official-app.md  0014-treat-pdfjs-bundled-css-as-unscoped-and-adversarial.md  0015-let-armed-tools-create-over-existing-annotation-regions.md  0016-sidebar-width-is-js-state-not-pure-css.md  (+2 more)
pdf-annotation-spike/: SPIKE.md  package-lock.json  package.json  playwright.config.ts  wdio.conf.ts
(+139 files in other folders)
